--- a/project/src/sass/_recipe.scss
+++ b/project/src/sass/_recipe.scss
@@ -101,7 +101,7 @@
 	}
 
 	&__info-data {
-		margin-right: 0.5rem;
+		min-width: 1.8rem;
 		font-weight: 700;
 	}
 
